# transformers

./: .gitignore  Makefile  README.md  environment-full.yaml  environment-hist.yaml  pyproject.toml
notebooks/: .gitignore  example.ipynb  fine-tuning-2.ipynb  fine-tuning.ipynb  from_scratch.ipynb  medical-bert-2.ipynb  medical-bert.ipynb
