[tool.poetry]
name = "transformers-environment"
version = "0.1.0"
description = "transformers environment"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.dependencies]
python = "3.10.12"
pandas = "2.2.2"
jupyterlab = "4.2.4"
notebook = "7.2.1"
nbconvert = "7.16.4"
ipywidgets = "8.1.3"
matplotlib = "3.8.4"
scikit-learn = "1.5.1"
sweetviz = "2.3.1"
tqdm = "4.66.5"
pyorc = "0.9.0"
pyarrow = "16.1.0"
tenacity = "8.2.2"
numpy = "1.26.4"
plotly = "5.23"
seaborn = "0.13.2"

[tool.poetry.group.pytorch.dependencies]
torch = { version = "=2.4.0+cu118", source="torch118"}
torchaudio = { version = "=2.4.0+cu118", source="torch118"}
torchvision = { version = "=0.19.0+cu118", source="torch118"}
torchdata = { version = "=0.7.1", source="torch118"}

[tool.poetry.group.nn.dependencies]
transformers = "4.44.0"
accelerate = "0.33.0"
evaluate = "0.4.2"
rouge-score = "0.1.2"
datasets = "2.20.0"
trl = "0.9.6"
peft = "0.12.0"
bitsandbytes = "0.43.3"

[tool.poetry.group.db.dependencies]
wandb = "0.17.7"
vectordb = "0.0.21"

[tool.poetry.group.fix.dependencies]
filelock = "3.15.4"
msgpack = "1.0.8"

[tool.poetry.group.sound.dependencies]
soundfile = "0.12.1"
librosa = "0.10.2"

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
